[tool.poetry]
name = "catalog"
version = "0.1.0"
description = ""
authors = ["Ilaria Schinina <ilaria.schinina@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
oauthlib = "^3.1"
requests = "^2.22"
requests-oauthlib = "^1.3"
Flask-SQLAlchemy = "^2.4"



[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
